# avia-calendar-app

./: .gitignore  README.md  package-lock.json
.claude/: launch.json
.github/workflows/: frontend-ci.yml
backend/analytics/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.database.yml  docker-compose.yml  pyproject.toml
backend/analytics/app/: __init__.py  main.py  settings.py
backend/analytics/app/db/: __init__.py  dedupe.py  deps.py  flight_identity.py  models.py  session.py
backend/analytics/app/modeling/: __init__.py  features.py  price_xgb.py
backend/analytics/app/routers/: __init__.py  sync.py
backend/analytics/app/schemas/: sync.py  tickets.py
backend/analytics/app/sync/: __init__.py  scheduler.py  tickets_historical.py  time_parsing.py
backend/analytics/scripts/: generate_historical_seed.py
backend/analytics/scripts/initdb/: 01_historical_flights.sql
backend/analytics/tests/: conftest.py  test_db.py  test_db_models.py  test_flight_identity.py  test_main.py  test_modeling.py  test_sync_router.py  test_tickets_sync.py
backend/tickets/: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.database.yml  docker-compose.yml  pyproject.toml
backend/tickets/.cursor/rules/: main.mdc
backend/tickets/alembic/: env.py
backend/tickets/app/: __init__.py  config.py  main.py
backend/tickets/app/db/: session.py
backend/tickets/app/routers/: airports.py  companies.py  tickets.py
backend/tickets/app/schemas/: airports.py  companies.py  tickets.py
backend/tickets/app/services/: __init__.py  airport_query.py  company_query.py  ticket_book.py  ticket_next_month_query.py  ticket_prices_patch.py  ticket_query.py  ticket_range_query.py
backend/tickets/database/: generate_seed.py  schema.sql  seed_data.sql  seed_synthetic_data.sql
backend/tickets/tests/: __init__.py  test_airports.py  test_companies.py  test_health.py  test_tickets.py
frontend/: .env.api  .env.mock  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/app/: App.tsx  index.tsx
frontend/src/app/config/: router.ts
frontend/src/app/layout/: BaseLayout.tsx  Header.tsx  Layout.tsx  header.tsx  layout.module.css  layout.tsx  styles.module.css
frontend/src/app/msw/: handlers.ts
frontend/src/app/styles/: antd-theme.ts  antd.css  globals.css  index.ts  normalize.css  variables.css
frontend/src/features/flight-filters/: index.ts
frontend/src/features/flight-filters/consts/: defaults.ts  labels.ts
frontend/src/features/flight-filters/hooks/: useFlightFilters.ts
frontend/src/features/flight-filters/lib/: FlightFiltersContext.tsx  FlightFiltersProvider.tsx  types.ts  useFlightFilters.ts
frontend/src/features/flight-filters/model/: defaults.ts  filter-ticket-groups.ts  labels.ts  map-filters-to-ticket-request.ts  types.ts  use-companies-query.ts  (+1 more)
frontend/src/features/flight-list/: index.ts
frontend/src/features/flight-offers-list/: index.ts
frontend/src/features/flight-results/: index.ts
frontend/src/features/launch-experiment/: index.ts
frontend/src/features/price-dynamics-chart/: index.ts
frontend/src/features/recommendation-tags/: index.ts
frontend/src/features/search-form/: index.ts
frontend/src/pages/OfferPage/: index.ts
frontend/src/pages/offer/: index.ts
frontend/src/pages/search/: index.ts
frontend/src/shared/api/: AirportService.ts  FlightService.ts  index.ts
frontend/src/shared/assets/: index.ts
frontend/src/shared/consts/: api.ts  consts.ts  index.ts
frontend/src/shared/hooks/: useFetch.ts
frontend/src/shared/types/: api.ts  index.ts  svg.d.ts
frontend/src/shared/ui/: AirlineCircle.tsx  index.ts
frontend/src/shared/utils/: cn.ts  flightFormatters.ts  formatData.ts  getFlightSearchParams.ts  getSearchParams.ts  index.ts  yandexMetrika.ts
(+126 files in other folders)
