[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickets-api"
version = "0.1.0"
description = "Tickets API service (FastAPI + PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "pydantic-settings>=2,<3",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "mypy>=1.13,<2",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
mypy_path = "."
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "alembic.versions.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["*/alembic/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
